refactor: 멤벼 변수나 반환값이 변경되지 않도록 수정
- 멤버 변수는 final 사용
- Collection은 unmodifiable사용